[package]
name = "vizia_baseview"
version = "0.1.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>", "Billy Messenger <BillyDM@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/geom3trik/VIZIA"
description = "Baseview backend for vizia"


[dependencies]
raw-gl-context = "0.1"
vizia_core = { path = "../core" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "f6e99e9aa6f5aeb6b721cb05e4d882a51d995909"}
keyboard-types = { version = "0.5.0", default-features = false }
raw-window-handle = "0.3"
femtovg = {git = "https://github.com/rhelmot/femtovg", rev = "4caba90e08e8eacf66dce2125393334a9cee22d1", default-features = false}
