[package]
name = "vizia_core"
version = "0.1.0"
authors = ["George Atkinson"]
license = "MIT"
repository = "https://github.com/vizia/vizia"
edition = "2021"
description = "Core components of vizia"

[features]
meadowlark = ["rusty-daw-core"]
clipboard = ["copypasta"]

[dependencies]
vizia_derive = {version = "0.1.0", path = "../derive"}
femtovg = { git = "https://github.com/femtovg/femtovg", rev = "604f35e52f403b2ad98774bcdc56c09dcedf32e6", default-features = false, features = ["image-loading"] }
image = { version = "0.24.0", default-features = false, features = ["png"] } # inherited from femtovg
morphorm = {git = "https://github.com/vizia/morphorm", features = ["rounding"], rev = "6059f6418817589f2efb9d3a0b27b33f4957e1f9" }
bitflags = "1.3.2"
fnv = "1.0.7"
keyboard-types = { version = "0.5.0", default-features = false }
fluent-bundle = "0.15.2"
fluent-langneg = "0.13"
fluent-syntax = "0.11.0"
unic-langid = "0.9"
locale_config = "*"  # see https://github.com/rust-locale/locale_config for wildcard explanation
cssparser = "0.27.2"
unicode-segmentation = "1.8.0"
copypasta = {version = "0.7.1", optional = true}
instant = "0.1.12"

rusty-daw-core = {version = "0.7.4", optional = true}

# Required so that doc tests will compile
[dev-dependencies]
vizia_winit = {version = "0.1.0", path = "../winit" }
